kubernetes/examples/servicelb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    deploy: "true"
  ports:
  - port: 80
