kubernetes/examples/servicelb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: <mydomain>
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp
            port:
              number: 80
